force-app/main/default/objects/OppPriceRequestItem__c/OppPriceRequestItem__c.object-meta.xml
<CustomObject>
    <label>Price Request Item</label>
    <nameField>
        <displayFormat>OPRI-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>