force-app/main/default/objects/OppPriceRequestItem__c/fields/ActualPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualPrice__c</fullName>
    <inlineHelpText>Actual Promo Factory Price</inlineHelpText>
    <label>Actual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>