force-app/main/default/objects/OppPriceRequestItem__c/fields/ApprovedPrice__c.field-meta.xml
<CustomField>
    <fullName>ApprovedPrice__c</fullName>
    <label>Approved Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>