force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryApprovedPrice__c.field-meta.xml
<CustomField>
    <fullName>FactoryApprovedPrice__c</fullName>
    <label>Factory Approved Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>