force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryApprover__c.field-meta.xml
<CustomField>
    <fullName>FactoryApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>