force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryMargin__c.field-meta.xml
<CustomField>
    <fullName>FactoryMargin__c</fullName>
    <label>Factory Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>