force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryPrice__c.field-meta.xml
<CustomField>
    <fullName>FactoryPrice__c</fullName>
    <inlineHelpText>Factory price with no promos</inlineHelpText>
    <label>Factory Price per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>