force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryPriceNeeded__c.field-meta.xml
<CustomField>
    <fullName>FactoryPriceNeeded__c</fullName>
    <label>Factory Price Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>