force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryRequest__c.field-meta.xml
<CustomField>
    <fullName>FactoryRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factory Request</label>
    <type>Checkbox</type>
</CustomField>