force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryReviewDate__c.field-meta.xml
<CustomField>
    <fullName>FactoryReviewDate__c</fullName>
    <label>Factory Review Date</label>
    <type>DateTime</type>
</CustomField>