force-app/main/default/objects/OppPriceRequestItem__c/fields/FactoryStatus__c.field-meta.xml
<CustomField>
    <fullName>FactoryStatus__c</fullName>
    <label>Factory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOTSENT</fullName>
                <default>true</default>
                <label>NOTSENT</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>APPROVEDPARTIALLY</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>