force-app/main/default/objects/OppPriceRequestItem__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <inlineHelpText>Margin achieved if approved</inlineHelpText>
    <label>Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>