force-app/main/default/objects/OppPriceRequestItem__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field relating Opportunity Line Item</description>
    <label>OpportunityProduct</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Price Request Items</relationshipLabel>
    <relationshipName>PriceRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>