force-app/main/default/objects/OppPriceRequestItem__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Pricebook Price per unit</description>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>