force-app/main/default/objects/OppPriceRequestItem__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pricebook wich the default pricebook price has been taken</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Price Request Items</relationshipLabel>
    <relationshipName>PriceRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>