force-app/main/default/objects/OppPriceRequestItem__c/fields/PriceNeeded__c.field-meta.xml
<CustomField>
    <fullName>PriceNeeded__c</fullName>
    <label>Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>