force-app/main/default/objects/OppPriceRequestItem__c/fields/PriceRequestHeader__c.field-meta.xml
<CustomField>
    <fullName>PriceRequestHeader__c</fullName>
    <label>Price Request Header</label>
    <referenceTo>OppPriceRequestHeader__c</referenceTo>
    <relationshipLabel>Price Request Items</relationshipLabel>
    <relationshipName>OppPriceRequestItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>