force-app/main/default/objects/OppPriceRequestItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Request Items</relationshipLabel>
    <relationshipName>Price_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>