force-app/main/default/objects/OppPriceRequestItem__c/fields/ProductCodeFormula__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeFormula__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code Formula</label>
    <type>Text</type>
</CustomField>