force-app/main/default/objects/OppPriceRequestItem__c/fields/ProductNameFormula__c.field-meta.xml
<CustomField>
    <fullName>ProductNameFormula__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Formula</label>
    <type>Text</type>
</CustomField>