force-app/main/default/objects/OppPriceRequestItem__c/fields/PromoFactoryPrice__c.field-meta.xml
<CustomField>
    <fullName>PromoFactoryPrice__c</fullName>
    <label>Promo Factory Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>