force-app/main/default/objects/OppPriceRequestItem__c/fields/ReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>ReferencePrice__c</fullName>
    <description>PVP del producto</description>
    <label>Reference Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>