force-app/main/default/objects/OppPriceRequestItem__c/fields/ReviewedDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewedDate__c</fullName>
    <description>Date that an Approver reviewed the item</description>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>