force-app/main/default/objects/OppPriceRequestItem__c/fields/SubmittedBackDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBackDate__c</fullName>
    <label>Submitted Back Date</label>
    <type>Date</type>
</CustomField>