force-app/main/default/objects/OppPriceRequestItem__c/fields/SubmittedFactoryDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedFactoryDate__c</fullName>
    <label>Submitted Factory Date</label>
    <type>DateTime</type>
</CustomField>