force-app/main/default/objects/OppPriceRequestItem__c/fields/SubmittedToFactoryManager__c.field-meta.xml
<CustomField>
    <fullName>SubmittedToFactoryManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted To Factory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Request_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>