force-app/main/default/objects/OppPriceRequestItem__c/fields/UnitOfPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitOfPrice__c</fullName>
    <description>The Product unit related to the Price</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>